# passtest

./: .gitignore  README.md  pyproject.toml  test_mformat.py  test_oddeven.py
examples/: test_ioi89_1.py  test_ioi89_2.py  test_mformat.py
src/: gpt_utils.py  passtest.py
