[tool.poetry]
name = "passtest"
version = "0.1.0"
description = "GPT-assisted Test-Driven Development with Python"
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.4.0"
typer = "^0.9.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
