[tool.poetry]
name = "passtest"
version = "0.1.0"
description = "GPT-assisted Test-Driven Development with Python"
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.4.0"
typer = "^0.9.0"
pytest = "^7.4.3"
ruff = "^0.1.8"
pytest-timeout = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    'A',   # flake8-builtins
    'ARG',   # flake8-unused-arguments
    'ASYNC',  # flake8-async
    'B',   # flake8-bugbear
    'BLE',   # flake8-blind-except
    'C4',   # flake8-comprehensions
    'COM',  # flake8-commas
    'DTZ',   # flake8-datetimez
    'E',   # pycodestyle (errors only)
    'F',   # pyflakes
    'FBT',  # flake8-boolean-trap
    'FLY', # flynt
    # 'FURB',  # refurb  --preview
    'G',  # flake8-logging-format
    'I',   # isort
    'ICN',   # flake8-import-conventions
    'INP',   # flake8-no-pep420
    'ISC',   # flake8-implicit-string-concat
    # 'LOG',  # flake8-logging  --preview
    'N',   # pep8-naming
    'NPY',   # NumPy-specific rules
    'PIE',   # flake8-pie
    'PD',   # pandas-vet
    'PERF',  # Perflint
    'PGH',   # pygrep-hooks
    'PL',   # pylint
    'PT',   # flake8-pytest-style
    'PTH',   # flake8-use-pathlib
    'PYI',   # flake8-pyi
    'Q',   # flake8-quotes
    'RET',  # flake8-return
    'RSE',  # flake8-raise
    'RUF',   # Ruff-specific rules
    'S',  # flake8-bandit
    'SIM',  # flake8-simplify
    'SLF',   # flake8-self
    'T10',  # flake8-debugger
    'T20',  # flake8-print
    'TD',  # flake8-todos
    'TID',  # flake8-tidy-imports
    'TRY',   # tryceratops
    'UP',  # pyupgrade
    'W',  # pycodestyle (warnings only)
    'YTT',  # flake8-2020
]

ignore = [
    "A003",  # builtin-attribute-shadowing
    "E501",  # line-too-long
    "B008",  # function-call-in-default-argument
    "B023",  # function-uses-loop-variable
    "TRY003",  # raise-vanilla-args
    "PLR0913",  # too-many-arguments
    "TD003",  # missing-todo-link
    "PD901",  # pandas-df-variable-name
    "PD015",  # pandas-use-of-pd-merge
    "PD011",  # pandas-use-of-dot-values
    "COM812",  # Incompatible with `ruff format`
    "ISC001",  # Incompatible with `ruff format`
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "BLE001"]
"test_*" = ["S101", "PLR2004", "BLE001"]
